Improving pattern handling for non-null types; includes code by Vicente.